--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-# Hey there, I'm Jason 👋
+﻿# Hey there, I'm Jason 👋
 
 Currently, I work at https://microsoft.com[Microsoft] as a Sr. Consultant. I spend my days between helping customers work through digital transformations, developing solutions to aid their businesses and sharing dank memes with co-workers. 
 
@@ -30,5 +30,7 @@ image:https://img.shields.io/badge/LinkedIn-Let's%20Connect-blue["LinkedIn",link
 
 |====
 // untappd beer
-include::untappd.asciidoc[]
+| image:https://untappd.akamaized.net/photos/2021_02_20/e6988df410dbf6afd5b7af0bf738e052_200x200.jpg[For the Company - Bluejacket] | Drinking a *For the Company by Bluejacket. It is a *Lager - Helles* style of beer. | I rated it a *4*
+| image:https://untappd.akamaized.net/photos/2021_02_20/87093b13818afcc653e7afeb88a1b779_200x200.jpg[Marg Mix - Cushwa Brewing Company] | Drinking a *Marg Mix by Cushwa Brewing Company. It is a *Sour - Gose* style of beer. | I rated it a *3.75*
+| image:https://untappd.akamaized.net/photos/2021_02_15/fb1108d8508fe5aaa7a50bdef194d5ba_200x200.jpg[Bright Edges - Other Half Brewing Co.] | Drinking a *Bright Edges by Other Half Brewing Co.. It is a *IPA - American* style of beer. | I rated it a *4*
 // untappd end
