--- a/README.asciidoc
+++ b/README.asciidoc
@@ -26,6 +26,9 @@ image:https://img.shields.io/twitter/follow/jtucker?style=flat-square&color=blue
 
 image:https://img.shields.io/badge/LinkedIn-Let's%20Connect-blue["LinkedIn",link="https://linkedin.com/in/jatucke]
 
+### What is currently blasting through my speakers
+[![spotify-github-profile](https://spotify-github-profile.vercel.app/api/view?uid=soulposition&cover_image=true&theme=novatorem&bar_color=c43c3c&bar_color_cover=true)](https://github.com/kittinan/spotify-github-profile)
+
 ### My Latest Untappd checkins
 
 |====
