--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-﻿# Hey there, I'm Jason 👋
+# Hey there, I'm Jason 👋
 
 Currently, I work at https://microsoft.com[Microsoft] as a Sr. Consultant. I spend my days between helping customers work through digital transformations, developing solutions to aid their businesses and sharing dank memes with co-workers. 
 
@@ -27,7 +27,8 @@ image:https://img.shields.io/twitter/follow/jtucker?style=flat-square&color=blue
 image:https://img.shields.io/badge/LinkedIn-Let's%20Connect-blue["LinkedIn",link="https://linkedin.com/in/jatucke]
 
 ### What is currently blasting through my speakers
-[![spotify-github-profile](https://spotify-github-profile.vercel.app/api/view?uid=soulposition&cover_image=true&theme=novatorem&bar_color=c43c3c&bar_color_cover=true)](https://github.com/kittinan/spotify-github-profile)
+
+image:https://spotify-github-profile.vercel.app/api/view?uid=soulposition&cover_image=true&theme=novatorem&bar_color=c43c3c&bar_color_cover=true["Spotify",link="https://github.com/kittinan/spotify-github-profile"]
 
 ### My Latest Untappd checkins
 
