--- a/README.asciidoc
+++ b/README.asciidoc
@@ -22,13 +22,12 @@ My current interests include:
 
 Feel free to reach out via any of the places below:
 
-image:https://img.shields.io/twitter/follow/jtucker?style=flat-square&color=blue["Twitter",link="https://twitter.com/jtucker]
+image:https://img.shields.io/twitter/follow/jtucker?style=flat-square&color=blue["Twitter",link="https://twitter.com/jtucker"]
 
-image:https://img.shields.io/badge/LinkedIn-Let's%20Connect-blue["LinkedIn",link="https://linkedin.com/in/jatucke]
+image:https://img.shields.io/badge/LinkedIn-Let's%20Connect-blue["LinkedIn",link="https://linkedin.com/in/jatucke"]
 
 ### What is currently blasting through my speakers
-
-image:https://spotify-github-profile.vercel.app/api/view?uid=soulposition&cover_image=true&theme=novatorem&bar_color=c43c3c&bar_color_cover=true["Spotify",link="https://github.com/kittinan/spotify-github-profile"]
+[![spotify-github-profile](https://spotify-github-profile.kittinanx.com/api/view?uid=soulposition&cover_image=true&theme=default&show_offline=false&background_color=121212&interchange=false)](https://github.com/kittinan/spotify-github-profile)
 
 ### My Latest Untappd checkins
 
